// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventPreview /> should render  when illustration not displayed 1`] = `
<EventPreviewstyle__EventPreviewContainer
  isHighlighted={false}
>
  <Relay(EventImage)
    enabled={false}
    event={
      Object {
        " $fragmentRefs": null,
        " $refType": null,
        "author": Object {
          " $fragmentRefs": null,
        },
        "availableRegistration": 0,
        "googleMapsAddress": Object {
          " $fragmentRefs": null,
          "__typename": "GoogleMapsAddress",
        },
        "guestListEnabled": false,
        "isCompleteAndRegistrationPossibleResolver": false,
        "isMeasurable": false,
        "isRegistrationPossible": true,
        "maxRegistrations": null,
        "steps": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "CollectStep",
          },
        ],
        "themes": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "Theme",
          },
        ],
        "timeRange": Object {
          "endAt": null,
          "isFuture": true,
          "startAt": "2030-03-10 00:00:00",
        },
        "title": "Lorem ipsum dolor sit amet, consectetur adipiscing.",
        "url": "#",
      }
    }
  />
  <Body>
    <EventPreviewstyle__HeadContent>
      <EventPreviewstyle__DateContainer>
        <Date
          endDate={null}
          startDate="2030-03-10 00:00:00"
        />
      </EventPreviewstyle__DateContainer>
    </EventPreviewstyle__HeadContent>
    <EventPreviewstyle__Content>
      <EventPreviewstyle__TitleContainer>
        <Icon
          color="#007bff"
          name="eventPhysical"
          size={17}
        />
        <Title
          tagName="h3"
        >
          <a
            href="#"
            title="Lorem ipsum dolor sit amet, consectetur adipiscing."
          >
            <Truncate
              ellipsis="…"
              lines={2}
              trimWhitespace={false}
              width={0}
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing.
            </Truncate>
          </a>
        </Title>
      </EventPreviewstyle__TitleContainer>
      <EventPreviewstyle__TagsList>
        <Relay(TagUser)
          size={20}
          user={
            Object {
              " $fragmentRefs": null,
            }
          }
        />
        <Relay(TagCity)
          address={
            Object {
              " $fragmentRefs": null,
              "__typename": "GoogleMapsAddress",
            }
          }
          size="16px"
        />
        <Relay(TagThemes)
          size="16px"
          themes={
            Array [
              Object {
                " $fragmentRefs": null,
                "__typename": "Theme",
              },
            ]
          }
        />
        <Relay(TagStep)
          size="16px"
          step={
            Object {
              " $fragmentRefs": null,
              "__typename": "CollectStep",
            }
          }
        />
      </EventPreviewstyle__TagsList>
    </EventPreviewstyle__Content>
  </Body>
</EventPreviewstyle__EventPreviewContainer>
`;

exports[`<EventPreview /> should render correctly 1`] = `
<EventPreviewstyle__EventPreviewContainer
  isHighlighted={false}
>
  <Relay(EventImage)
    enabled={false}
    event={
      Object {
        " $fragmentRefs": null,
        " $refType": null,
        "author": Object {
          " $fragmentRefs": null,
        },
        "availableRegistration": 0,
        "googleMapsAddress": Object {
          " $fragmentRefs": null,
          "__typename": "GoogleMapsAddress",
        },
        "guestListEnabled": false,
        "isCompleteAndRegistrationPossibleResolver": false,
        "isMeasurable": false,
        "isRegistrationPossible": true,
        "maxRegistrations": null,
        "steps": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "CollectStep",
          },
        ],
        "themes": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "Theme",
          },
        ],
        "timeRange": Object {
          "endAt": null,
          "isFuture": true,
          "startAt": "2030-03-10 00:00:00",
        },
        "title": "Lorem ipsum dolor sit amet, consectetur adipiscing.",
        "url": "#",
      }
    }
  />
  <Body>
    <EventPreviewstyle__HeadContent>
      <EventPreviewstyle__DateContainer>
        <Date
          endDate={null}
          startDate="2030-03-10 00:00:00"
        />
      </EventPreviewstyle__DateContainer>
    </EventPreviewstyle__HeadContent>
    <EventPreviewstyle__Content>
      <EventPreviewstyle__TitleContainer>
        <Icon
          color="#007bff"
          name="eventPhysical"
          size={17}
        />
        <Title
          tagName="h3"
        >
          <a
            href="#"
            title="Lorem ipsum dolor sit amet, consectetur adipiscing."
          >
            <Truncate
              ellipsis="…"
              lines={2}
              trimWhitespace={false}
              width={0}
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing.
            </Truncate>
          </a>
        </Title>
      </EventPreviewstyle__TitleContainer>
      <EventPreviewstyle__TagsList>
        <Relay(TagUser)
          size={20}
          user={
            Object {
              " $fragmentRefs": null,
            }
          }
        />
        <Relay(TagCity)
          address={
            Object {
              " $fragmentRefs": null,
              "__typename": "GoogleMapsAddress",
            }
          }
          size="16px"
        />
        <Relay(TagThemes)
          size="16px"
          themes={
            Array [
              Object {
                " $fragmentRefs": null,
                "__typename": "Theme",
              },
            ]
          }
        />
        <Relay(TagStep)
          size="16px"
          step={
            Object {
              " $fragmentRefs": null,
              "__typename": "CollectStep",
            }
          }
        />
      </EventPreviewstyle__TagsList>
    </EventPreviewstyle__Content>
  </Body>
</EventPreviewstyle__EventPreviewContainer>
`;

exports[`<EventPreview /> should render correctly when guest enabled 1`] = `
<EventPreviewstyle__EventPreviewContainer
  isHighlighted={false}
>
  <Relay(EventImage)
    enabled={false}
    event={
      Object {
        " $fragmentRefs": null,
        " $refType": null,
        "author": Object {
          " $fragmentRefs": null,
        },
        "availableRegistration": 0,
        "googleMapsAddress": Object {
          " $fragmentRefs": null,
          "__typename": "GoogleMapsAddress",
        },
        "guestListEnabled": true,
        "isCompleteAndRegistrationPossibleResolver": false,
        "isMeasurable": false,
        "isRegistrationPossible": true,
        "maxRegistrations": null,
        "steps": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "CollectStep",
          },
        ],
        "themes": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "Theme",
          },
        ],
        "timeRange": Object {
          "endAt": null,
          "isFuture": true,
          "startAt": "2030-03-10 00:00:00",
        },
        "title": "Lorem ipsum dolor sit amet, consectetur adipiscing.",
        "url": "#",
      }
    }
  />
  <Body>
    <EventPreviewstyle__HeadContent>
      <EventPreviewstyle__DateContainer>
        <Date
          endDate={null}
          startDate="2030-03-10 00:00:00"
        />
      </EventPreviewstyle__DateContainer>
      <InlineList
        margin={true}
      >
        <li>
          <Label
            color="#007bff"
            fontSize={10}
          >
            <FormattedMessage
              id="registration-required"
              values={Object {}}
            />
          </Label>
        </li>
      </InlineList>
    </EventPreviewstyle__HeadContent>
    <EventPreviewstyle__Content>
      <EventPreviewstyle__TitleContainer>
        <Icon
          color="#007bff"
          name="eventPhysical"
          size={17}
        />
        <Title
          tagName="h3"
        >
          <a
            href="#"
            title="Lorem ipsum dolor sit amet, consectetur adipiscing."
          >
            <Truncate
              ellipsis="…"
              lines={2}
              trimWhitespace={false}
              width={0}
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing.
            </Truncate>
          </a>
        </Title>
      </EventPreviewstyle__TitleContainer>
      <EventPreviewstyle__TagsList>
        <Relay(TagUser)
          size={20}
          user={
            Object {
              " $fragmentRefs": null,
            }
          }
        />
        <Relay(TagCity)
          address={
            Object {
              " $fragmentRefs": null,
              "__typename": "GoogleMapsAddress",
            }
          }
          size="16px"
        />
        <Relay(TagThemes)
          size="16px"
          themes={
            Array [
              Object {
                " $fragmentRefs": null,
                "__typename": "Theme",
              },
            ]
          }
        />
        <Relay(TagStep)
          size="16px"
          step={
            Object {
              " $fragmentRefs": null,
              "__typename": "CollectStep",
            }
          }
        />
      </EventPreviewstyle__TagsList>
    </EventPreviewstyle__Content>
  </Body>
</EventPreviewstyle__EventPreviewContainer>
`;

exports[`<EventPreview /> should render correctly when guest enabled and tag complete 1`] = `
<EventPreviewstyle__EventPreviewContainer
  isHighlighted={false}
>
  <Relay(EventImage)
    enabled={false}
    event={
      Object {
        " $fragmentRefs": null,
        " $refType": null,
        "author": Object {
          " $fragmentRefs": null,
        },
        "availableRegistration": 0,
        "googleMapsAddress": Object {
          " $fragmentRefs": null,
          "__typename": "GoogleMapsAddress",
        },
        "guestListEnabled": true,
        "isCompleteAndRegistrationPossibleResolver": true,
        "isMeasurable": false,
        "isRegistrationPossible": true,
        "maxRegistrations": 3,
        "steps": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "CollectStep",
          },
        ],
        "themes": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "Theme",
          },
        ],
        "timeRange": Object {
          "endAt": null,
          "isFuture": true,
          "startAt": "2030-03-10 00:00:00",
        },
        "title": "Lorem ipsum dolor sit amet, consectetur adipiscing.",
        "url": "#",
      }
    }
  />
  <Tag
    className="eventTag"
    variantColor="red"
  >
    <Tag.Label>
      complete
    </Tag.Label>
  </Tag>
  <Body>
    <EventPreviewstyle__HeadContent>
      <EventPreviewstyle__DateContainer>
        <Date
          endDate={null}
          startDate="2030-03-10 00:00:00"
        />
      </EventPreviewstyle__DateContainer>
      <InlineList
        margin={true}
      >
        <li>
          <Label
            color="#007bff"
            fontSize={10}
          >
            <FormattedMessage
              id="registration-required"
              values={Object {}}
            />
          </Label>
        </li>
      </InlineList>
    </EventPreviewstyle__HeadContent>
    <EventPreviewstyle__Content>
      <EventPreviewstyle__TitleContainer>
        <Icon
          color="#007bff"
          name="eventPhysical"
          size={17}
        />
        <Title
          tagName="h3"
        >
          <a
            href="#"
            title="Lorem ipsum dolor sit amet, consectetur adipiscing."
          >
            <Truncate
              ellipsis="…"
              lines={2}
              trimWhitespace={false}
              width={0}
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing.
            </Truncate>
          </a>
        </Title>
      </EventPreviewstyle__TitleContainer>
      <EventPreviewstyle__TagsList>
        <Relay(TagUser)
          size={20}
          user={
            Object {
              " $fragmentRefs": null,
            }
          }
        />
        <Relay(TagCity)
          address={
            Object {
              " $fragmentRefs": null,
              "__typename": "GoogleMapsAddress",
            }
          }
          size="16px"
        />
        <Relay(TagThemes)
          size="16px"
          themes={
            Array [
              Object {
                " $fragmentRefs": null,
                "__typename": "Theme",
              },
            ]
          }
        />
        <Relay(TagStep)
          size="16px"
          step={
            Object {
              " $fragmentRefs": null,
              "__typename": "CollectStep",
            }
          }
        />
      </EventPreviewstyle__TagsList>
    </EventPreviewstyle__Content>
  </Body>
</EventPreviewstyle__EventPreviewContainer>
`;

exports[`<EventPreview /> should render correctly when guest enabled and tag register 1`] = `
<EventPreviewstyle__EventPreviewContainer
  isHighlighted={false}
>
  <Relay(EventImage)
    enabled={false}
    event={
      Object {
        " $fragmentRefs": null,
        " $refType": null,
        "author": Object {
          " $fragmentRefs": null,
        },
        "availableRegistration": 0,
        "googleMapsAddress": Object {
          " $fragmentRefs": null,
          "__typename": "GoogleMapsAddress",
        },
        "guestListEnabled": true,
        "isCompleteAndRegistrationPossibleResolver": false,
        "isMeasurable": false,
        "isRegistrationPossible": true,
        "isViewerParticipatingAtEvent": true,
        "maxRegistrations": 3,
        "steps": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "CollectStep",
          },
        ],
        "themes": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "Theme",
          },
        ],
        "timeRange": Object {
          "endAt": null,
          "isFuture": true,
          "startAt": "2030-03-10 00:00:00",
        },
        "title": "Lorem ipsum dolor sit amet, consectetur adipiscing.",
        "url": "#",
      }
    }
  />
  <Tag
    className="eventTag"
    variantColor="green"
  >
    <Tag.Label>
      admin.fields.event_registration.registered
    </Tag.Label>
  </Tag>
  <Body>
    <EventPreviewstyle__HeadContent>
      <EventPreviewstyle__DateContainer>
        <Date
          endDate={null}
          startDate="2030-03-10 00:00:00"
        />
      </EventPreviewstyle__DateContainer>
      <InlineList
        margin={true}
      >
        <li>
          <Label
            color="#007bff"
            fontSize={10}
          >
            <FormattedMessage
              id="registration-required"
              values={Object {}}
            />
          </Label>
        </li>
      </InlineList>
    </EventPreviewstyle__HeadContent>
    <EventPreviewstyle__Content>
      <EventPreviewstyle__TitleContainer>
        <Icon
          color="#007bff"
          name="eventPhysical"
          size={17}
        />
        <Title
          tagName="h3"
        >
          <a
            href="#"
            title="Lorem ipsum dolor sit amet, consectetur adipiscing."
          >
            <Truncate
              ellipsis="…"
              lines={2}
              trimWhitespace={false}
              width={0}
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing.
            </Truncate>
          </a>
        </Title>
      </EventPreviewstyle__TitleContainer>
      <EventPreviewstyle__TagsList>
        <Relay(TagUser)
          size={20}
          user={
            Object {
              " $fragmentRefs": null,
            }
          }
        />
        <Relay(TagCity)
          address={
            Object {
              " $fragmentRefs": null,
              "__typename": "GoogleMapsAddress",
            }
          }
          size="16px"
        />
        <Relay(TagThemes)
          size="16px"
          themes={
            Array [
              Object {
                " $fragmentRefs": null,
                "__typename": "Theme",
              },
            ]
          }
        />
        <Relay(TagStep)
          size="16px"
          step={
            Object {
              " $fragmentRefs": null,
              "__typename": "CollectStep",
            }
          }
        />
      </EventPreviewstyle__TagsList>
    </EventPreviewstyle__Content>
  </Body>
</EventPreviewstyle__EventPreviewContainer>
`;

exports[`<EventPreview /> should render correctly when guest enabled and tag rest 1`] = `
<EventPreviewstyle__EventPreviewContainer
  isHighlighted={false}
>
  <Relay(EventImage)
    enabled={false}
    event={
      Object {
        " $fragmentRefs": null,
        " $refType": null,
        "author": Object {
          " $fragmentRefs": null,
        },
        "availableRegistration": 3,
        "googleMapsAddress": Object {
          " $fragmentRefs": null,
          "__typename": "GoogleMapsAddress",
        },
        "guestListEnabled": true,
        "isCompleteAndRegistrationPossibleResolver": false,
        "isMeasurable": false,
        "isRegistrationPossible": true,
        "isViewerParticipatingAtEvent": true,
        "maxRegistrations": 10,
        "steps": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "CollectStep",
          },
        ],
        "themes": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "Theme",
          },
        ],
        "timeRange": Object {
          "endAt": null,
          "isFuture": true,
          "startAt": "2030-03-10 00:00:00",
        },
        "title": "Lorem ipsum dolor sit amet, consectetur adipiscing.",
        "url": "#",
      }
    }
  />
  <Tag
    className="eventTag"
    variantColor="green"
  >
    <Tag.Label>
      admin.fields.event_registration.registered
    </Tag.Label>
  </Tag>
  <Body>
    <EventPreviewstyle__HeadContent>
      <EventPreviewstyle__DateContainer>
        <Date
          endDate={null}
          startDate="2030-03-10 00:00:00"
        />
      </EventPreviewstyle__DateContainer>
      <InlineList
        margin={true}
      >
        <li>
          <Label
            color="#007bff"
            fontSize={10}
          >
            <FormattedMessage
              id="registration-required"
              values={Object {}}
            />
          </Label>
        </li>
      </InlineList>
    </EventPreviewstyle__HeadContent>
    <EventPreviewstyle__Content>
      <EventPreviewstyle__TitleContainer>
        <Icon
          color="#007bff"
          name="eventPhysical"
          size={17}
        />
        <Title
          tagName="h3"
        >
          <a
            href="#"
            title="Lorem ipsum dolor sit amet, consectetur adipiscing."
          >
            <Truncate
              ellipsis="…"
              lines={2}
              trimWhitespace={false}
              width={0}
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing.
            </Truncate>
          </a>
        </Title>
      </EventPreviewstyle__TitleContainer>
      <EventPreviewstyle__TagsList>
        <Relay(TagUser)
          size={20}
          user={
            Object {
              " $fragmentRefs": null,
            }
          }
        />
        <Relay(TagCity)
          address={
            Object {
              " $fragmentRefs": null,
              "__typename": "GoogleMapsAddress",
            }
          }
          size="16px"
        />
        <Relay(TagThemes)
          size="16px"
          themes={
            Array [
              Object {
                " $fragmentRefs": null,
                "__typename": "Theme",
              },
            ]
          }
        />
        <Relay(TagStep)
          size="16px"
          step={
            Object {
              " $fragmentRefs": null,
              "__typename": "CollectStep",
            }
          }
        />
      </EventPreviewstyle__TagsList>
    </EventPreviewstyle__Content>
  </Body>
</EventPreviewstyle__EventPreviewContainer>
`;

exports[`<EventPreview /> should render correctly when no date 1`] = `
<EventPreviewstyle__EventPreviewContainer
  isHighlighted={false}
>
  <Relay(EventImage)
    enabled={false}
    event={
      Object {
        " $fragmentRefs": null,
        " $refType": null,
        "author": Object {
          " $fragmentRefs": null,
        },
        "availableRegistration": 0,
        "googleMapsAddress": Object {
          " $fragmentRefs": null,
          "__typename": "GoogleMapsAddress",
        },
        "guestListEnabled": false,
        "isCompleteAndRegistrationPossibleResolver": false,
        "isMeasurable": false,
        "isRegistrationPossible": true,
        "maxRegistrations": null,
        "steps": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "CollectStep",
          },
        ],
        "themes": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "Theme",
          },
        ],
        "timeRange": Object {
          "endAt": null,
          "isFuture": false,
          "startAt": null,
        },
        "title": "Lorem ipsum dolor sit amet, consectetur adipiscing.",
        "url": "#",
      }
    }
  />
  <Body>
    <EventPreviewstyle__HeadContent>
      <EventPreviewstyle__DateContainer />
    </EventPreviewstyle__HeadContent>
    <EventPreviewstyle__Content>
      <EventPreviewstyle__TitleContainer>
        <Icon
          color="#007bff"
          name="eventPhysical"
          size={17}
        />
        <Title
          tagName="h3"
        >
          <a
            href="#"
            title="Lorem ipsum dolor sit amet, consectetur adipiscing."
          >
            <Truncate
              ellipsis="…"
              lines={2}
              trimWhitespace={false}
              width={0}
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing.
            </Truncate>
          </a>
        </Title>
      </EventPreviewstyle__TitleContainer>
      <EventPreviewstyle__TagsList>
        <Relay(TagUser)
          size={20}
          user={
            Object {
              " $fragmentRefs": null,
            }
          }
        />
        <Relay(TagCity)
          address={
            Object {
              " $fragmentRefs": null,
              "__typename": "GoogleMapsAddress",
            }
          }
          size="16px"
        />
        <Relay(TagThemes)
          size="16px"
          themes={
            Array [
              Object {
                " $fragmentRefs": null,
                "__typename": "Theme",
              },
            ]
          }
        />
        <Relay(TagStep)
          size="16px"
          step={
            Object {
              " $fragmentRefs": null,
              "__typename": "CollectStep",
            }
          }
        />
      </EventPreviewstyle__TagsList>
    </EventPreviewstyle__Content>
  </Body>
</EventPreviewstyle__EventPreviewContainer>
`;

exports[`<EventPreview /> should render correctly when no googleMapsAddress 1`] = `
<EventPreviewstyle__EventPreviewContainer
  isHighlighted={false}
>
  <Relay(EventImage)
    enabled={false}
    event={
      Object {
        " $fragmentRefs": null,
        " $refType": null,
        "author": Object {
          " $fragmentRefs": null,
        },
        "availableRegistration": 0,
        "googleMapsAddress": null,
        "guestListEnabled": false,
        "isCompleteAndRegistrationPossibleResolver": false,
        "isMeasurable": false,
        "isRegistrationPossible": true,
        "maxRegistrations": null,
        "steps": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "CollectStep",
          },
        ],
        "themes": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "Theme",
          },
        ],
        "timeRange": Object {
          "endAt": null,
          "isFuture": true,
          "startAt": "2030-03-10 00:00:00",
        },
        "title": "Lorem ipsum dolor sit amet, consectetur adipiscing.",
        "url": "#",
      }
    }
  />
  <Body>
    <EventPreviewstyle__HeadContent>
      <EventPreviewstyle__DateContainer>
        <Date
          endDate={null}
          startDate="2030-03-10 00:00:00"
        />
      </EventPreviewstyle__DateContainer>
    </EventPreviewstyle__HeadContent>
    <EventPreviewstyle__Content>
      <EventPreviewstyle__TitleContainer>
        <Icon
          color="#007bff"
          name="eventPhysical"
          size={17}
        />
        <Title
          tagName="h3"
        >
          <a
            href="#"
            title="Lorem ipsum dolor sit amet, consectetur adipiscing."
          >
            <Truncate
              ellipsis="…"
              lines={2}
              trimWhitespace={false}
              width={0}
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing.
            </Truncate>
          </a>
        </Title>
      </EventPreviewstyle__TitleContainer>
      <EventPreviewstyle__TagsList>
        <Relay(TagUser)
          size={20}
          user={
            Object {
              " $fragmentRefs": null,
            }
          }
        />
        <Relay(TagThemes)
          size="16px"
          themes={
            Array [
              Object {
                " $fragmentRefs": null,
                "__typename": "Theme",
              },
            ]
          }
        />
        <Relay(TagStep)
          size="16px"
          step={
            Object {
              " $fragmentRefs": null,
              "__typename": "CollectStep",
            }
          }
        />
      </EventPreviewstyle__TagsList>
    </EventPreviewstyle__Content>
  </Body>
</EventPreviewstyle__EventPreviewContainer>
`;

exports[`<EventPreview /> should render correctly when no themes 1`] = `
<EventPreviewstyle__EventPreviewContainer
  isHighlighted={false}
>
  <Relay(EventImage)
    enabled={false}
    event={
      Object {
        " $fragmentRefs": null,
        " $refType": null,
        "author": Object {
          " $fragmentRefs": null,
        },
        "availableRegistration": 0,
        "googleMapsAddress": Object {
          " $fragmentRefs": null,
          "__typename": "GoogleMapsAddress",
        },
        "guestListEnabled": false,
        "isCompleteAndRegistrationPossibleResolver": false,
        "isMeasurable": false,
        "isRegistrationPossible": true,
        "maxRegistrations": null,
        "steps": Array [
          Object {
            " $fragmentRefs": null,
            "__typename": "CollectStep",
          },
        ],
        "themes": Array [],
        "timeRange": Object {
          "endAt": null,
          "isFuture": true,
          "startAt": "2030-03-10 00:00:00",
        },
        "title": "Lorem ipsum dolor sit amet, consectetur adipiscing.",
        "url": "#",
      }
    }
  />
  <Body>
    <EventPreviewstyle__HeadContent>
      <EventPreviewstyle__DateContainer>
        <Date
          endDate={null}
          startDate="2030-03-10 00:00:00"
        />
      </EventPreviewstyle__DateContainer>
    </EventPreviewstyle__HeadContent>
    <EventPreviewstyle__Content>
      <EventPreviewstyle__TitleContainer>
        <Icon
          color="#007bff"
          name="eventPhysical"
          size={17}
        />
        <Title
          tagName="h3"
        >
          <a
            href="#"
            title="Lorem ipsum dolor sit amet, consectetur adipiscing."
          >
            <Truncate
              ellipsis="…"
              lines={2}
              trimWhitespace={false}
              width={0}
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing.
            </Truncate>
          </a>
        </Title>
      </EventPreviewstyle__TitleContainer>
      <EventPreviewstyle__TagsList>
        <Relay(TagUser)
          size={20}
          user={
            Object {
              " $fragmentRefs": null,
            }
          }
        />
        <Relay(TagCity)
          address={
            Object {
              " $fragmentRefs": null,
              "__typename": "GoogleMapsAddress",
            }
          }
          size="16px"
        />
        <Relay(TagStep)
          size="16px"
          step={
            Object {
              " $fragmentRefs": null,
              "__typename": "CollectStep",
            }
          }
        />
      </EventPreviewstyle__TagsList>
    </EventPreviewstyle__Content>
  </Body>
</EventPreviewstyle__EventPreviewContainer>
`;
